# nise-api

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt  example_mod.cpp  example_mod.h
include/nise/: stub.h
